--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
       background: #0d0d0d;
       margin-bottom: 10px;
       display: flex;
-      flex-direction: column-reverse; 
+      flex-direction: column-reverse; /* <<< CORREÇÃO DO CHAT: MANTÉM ISSO */
     }
     .chat-message {
       padding: 8px 12px;
@@ -799,6 +799,11 @@
       padding-top: 8px;
       border-top: 1px dashed var(--cor-borda);
     }
+    .deposit-form-container {
+        border-top: 1px solid var(--cor-borda);
+        margin-top: 20px;
+        padding-top: 20px;
+    }
 
   </style>
 </head>
@@ -827,6 +832,7 @@
       <div class="show-password-container">
         <input id="senha-confirm" type="password" placeholder="🔑 Confirmar Senha (visível)">
       </div>
+       <input id="cpfCadastro" type="text" placeholder="CPF (somente números)">
       <select id="tipo">
         <option value="cliente">🙋 Cliente</option>
         <option value="barbeiro">💈 Barbeiro</option>
@@ -962,23 +968,18 @@
     <h3>💰 Minha Carteira</h3>
     <p>Seu saldo atual é: <b style="color: var(--cor-destaque-ouro);">R$ <span id="saldoModal">0,00</span></b></p>
     <div class="deposit-form-container">
-    <input type="number" id="valorDepositoInput" class="input-moderno" placeholder="Valor do Depósito" required>
-    <button class="btn-moderno" onclick="processarDeposito()">🔒 Pagar com PagBank</button>
-</div>
-<button onclick="solicitarSaque()">📤 Sacar</button>
+        <h4>📥 Adicionar Saldo</h4>
+        <input type="number" id="valorDepositoInput" class="input-moderno" placeholder="Valor do Depósito (Ex: 50.00)" required>
+        <button class="btn-moderno" id="btnProcessarDeposito" onclick="processarDeposito()">🔒 Pagar com PagBank</button>
+    </div>
+    <div class="deposit-form-container">
+        <h4>📤 Sacar Saldo</h4>
+        <button onclick="solicitarSaque()">📤 Solicitar Saque</button>
+    </div>
     <button onclick="fecharModal(event)">❌ Fechar</button>
   </div>
 </div>
 
-<div id="modalEscolhaDeposito" class="modal" onclick="fecharModal(event)">
-  <div class="modal-content" onclick="event.stopPropagation()">
-    <h3>📥 Escolha o Método</h3>
-    <p>Como você gostaria de adicionar saldo?</p>
-    <button onclick="abrirModalDeposito('pix')">🔵 PIX</button>
-    <button onclick="abrirModalDeposito('cartao')">💳 Cartão de Crédito</button>
-    <button onclick="fecharModal(event)">❌ Cancelar</button>
-  </div>
-</div>
 
 <div id="modalPagamentoSaque" class="modal" onclick="fecharModal(event)">
   <div class="modal-content" onclick="event.stopPropagation()">
@@ -998,32 +999,16 @@
   </div>
 </div>
 
-<div id="modalDeposito" class="modal" onclick="fecharModal(event)">
+<!-- NOVO MODAL DE SAQUE EM ANÁLISE -->
+<div id="modalSaqueAnalisado" class="modal" onclick="fecharModal(event)">
   <div class="modal-content" onclick="event.stopPropagation()">
-    <h3>✅ Depósito em Processamento</h3>
-    <p>Depósito enviado! O saldo será atualizado automaticamente assim que o PagSeguro confirmar o pagamento.</p>
+    <h3>✅ Saque Solicitado!</h3>
+    <p>Sua solicitação de saque foi enviada e nossa equipe fará a transferência manual.</p>
+    <p style="font-size: 14px; opacity: 0.8;">Normalmente, o processo leva apenas alguns minutos.</p>
+    <a id="btnWhatsappSaque" href="#" target="_blank">
+      <button>🚀 Acelerar processo avisando a equipe</button>
+    </a>
     <button onclick="fecharModal(event)">✅ Entendi</button>
-  </div>
-</div>
-
-<div id="modalSaqueEnviado" class="modal" onclick="fecharModal(event)">
-  <div class="modal-content" onclick="event.stopPropagation()">
-    <h3>✅ Saque Solicitado</h3>
-    <p>Sua solicitação de saque foi enviada e está aguardando aprovação e processamento pelo PagSeguro.</p>
-    <button onclick="fecharModal(event)">✅ Entendi</button>
-  </div>
-</div>
-
-<div id="modalExibirPix" class="modal" onclick="fecharModal(event)">
-  <div class="modal-content" onclick="event.stopPropagation()">
-    <h3>🔵 Pague com PIX</h3>
-    <p>Escaneie o QR Code abaixo com o app do seu banco ou use o "Copia e Cola".</p>
-    <div style="text-align: center; margin: 20px 0;">
-        <img id="pixQrCodeImg" src="" alt="QR Code PIX" style="width: 200px; height: 200px; border: 1px solid var(--cor-borda);">
-    </div>
-    <textarea id="pixCopiaECola" rows="3" style="width: 100%; font-size: 12px; text-align: center;" readonly></textarea>
-    <button onclick="copiarCodigoPix()">📋 Copiar Código</button>
-    <button onclick="fecharModal(event)">✅ Já Paguei</button>
   </div>
 </div>
 
@@ -1357,8 +1342,7 @@
         <p>Você ainda não tem permissão pra cadastrar produtos na loja. Peça autorização pro administrador no WhatsApp.</p>
         <div style="display: flex; gap: 10px; margin-top: 15px;">
             <button onclick="fecharModal(event)" style="background-color: #555;">↩️ Cancelar</button>
-            <button onclick="solicitarLiberacaoLoja()" style="flex-grow: 1;">
-                <img src="https://logopng.com.br/logos/whatsapp-33.png" alt="WhatsApp" style="width:20px; height:20px; vertical-align: middle; margin-right: 8px;">
+            <button onclick="solicitarLiberacaoLoja()">
                 💬 Pedir no WhatsApp
             </button>
         </div>
@@ -2057,6 +2041,7 @@ function criarConta() {
   const senhaConfirm = document.getElementById("senha-confirm").value;
   const tipo = document.getElementById("tipo").value;
   const telefone = document.getElementById("telefone").value.trim();
+  const cpf = document.getElementById("cpfCadastro").value.trim();
   const estado = document.getElementById("estado").value;
   const cidade = document.getElementById("cidade").value;
   const nome = prompt("📝 Escolha seu nome:");
@@ -2069,6 +2054,7 @@ function criarConta() {
   }
   if (senha !== senhaConfirm) return alert("As senhas não coincidem.");
   if (!telefone || telefone.length < 11 || !/^\d+$/.test(telefone)) return alert("Por favor, insira um telefone válido com DDD (mínimo 11 dígitos).");
+  if (!cpf || cpf.length !== 11 || !/^\d+$/.test(cpf)) return alert("Por favor, insira um CPF válido com 11 dígitos (somente números).");
   if (!email || !senha || !nome || (email !== ADMIN_EMAIL && (!estado || !cidade))) return alert("Preencha todos os campos obrigatórios");
   if (!cadastroCoords) return alert("Por favor, permita o acesso à localização para continuar o cadastro.");
 
@@ -2080,7 +2066,7 @@ function criarConta() {
   auth.createUserWithEmailAndPassword(email, senha)
     .then(async cred => {
       const data = {
-        email, nome, tipo: tipoFinal, telefone, estado: estadoFinal, cidade: cidadeFinal,
+        email, nome, tipo: tipoFinal, telefone, cpf, estado: estadoFinal, cidade: cidadeFinal,
         saldo: 0, reputacao: 100, cortesSemana: 0,
         disponivel: "nao", listaServicos: [], promocoes: [], portfolio: [],
         chatAtivo: true, vip: false, lojaLiberada: false,
@@ -2663,7 +2649,7 @@ function abrirModalVip() {
                     </ul>
                 </div>
                 <p style="font-size: 12px; color: var(--cor-destaque-prata); margin-top: 20px;">Sua contribuição é um investimento direto em novas funcionalidades e melhorias para toda a comunidade.</p>
-                <button onclick="assinarVip()" style="margin-top: 15px;">💎 Assinar Agora</button>
+                <button onclick="assinarVip()">💎 Assinar Agora</button>
             </div>
         `;
     }
@@ -2722,34 +2708,32 @@ async function abrirChatGlobal() {
             return;
         }
 
-        // Guarda o último documento para a próxima busca
         ultimoDocumentoChat = snapshot.docs[snapshot.docs.length - 1];
-        btnCarregarMais.style.display = 'block'; // Mostra o botão após o primeiro carregamento
+        btnCarregarMais.style.display = 'block';
 
-        const messagesToRender = [];
-        snapshot.docChanges().forEach(change => {
+        for (const change of snapshot.docChanges().reverse()) { // <<< CORREÇÃO DO CHAT
             if (change.type === "added") {
                 const msgData = change.doc.data();
                 msgData.id = change.doc.id;
-                messagesToRender.push(msgData);
+                const messageDiv = await createMessageDiv(msgData);
+
+                if (document.getElementById(messageDiv.id)) continue;
+
+                const isScrolledToBottom = chatContainer.scrollHeight - chatContainer.clientHeight <= chatContainer.scrollTop + 1;
+
+                chatContainer.appendChild(messageDiv);
+
+                if (isScrolledToBottom) {
+                    chatContainer.scrollTop = chatContainer.scrollHeight;
+                }
             }
-        });
-
-        // Ordena para exibir corretamente (da mais antiga para a mais nova)
-        messagesToRender.sort((a, b) => (a.ts?.seconds || 0) - (b.ts?.seconds || 0));
-
-        for(const msg of messagesToRender) {
-             const messageDiv = await createMessageDiv(msg);
-             // Adiciona no final do container na carga inicial
-             chatContainer.appendChild(messageDiv);
         }
-        // Rola para a mensagem mais recente
-        chatContainer.scrollTop = chatContainer.scrollHeight;
     });
 
     document.getElementById('chatInput').addEventListener('keydown', e => { if (e.key === 'Enter' && !e.shiftKey) { e.preventDefault(); enviarMensagem(); } });
     if (!botInterval) botInterval = setInterval(sendBotMessage, 600000);
 }
+
 
 async function createMessageDiv(msg) {
     let remetenteNome = msg.remetenteNome || "Desconhecido";
@@ -2816,19 +2800,10 @@ async function carregarMaisMensagens() {
 
     ultimoDocumentoChat = snapshot.docs[snapshot.docs.length - 1];
 
-    const messagesToRender = [];
-    snapshot.forEach(doc => {
+    for (const doc of snapshot.docs.reverse()) { // <<< CORREÇÃO DO CHAT
         const msgData = doc.data();
         msgData.id = doc.id;
-        messagesToRender.push(msgData);
-    });
-
-    // Ordena para garantir a ordem correta
-    messagesToRender.sort((a, b) => (b.ts?.seconds || 0) - (a.ts?.seconds || 0));
-
-    for (const msg of messagesToRender) {
-        const messageDiv = await createMessageDiv(msg);
-        // Adiciona no topo do container
+        const messageDiv = await createMessageDiv(msgData);
         chatContainer.prepend(messageDiv);
     }
 
@@ -3282,25 +3257,20 @@ function abrirAvaliacoesBarbeiro() {
     });
 }
 
-// Abre o modal de escolha de método de pagamento
-function abrirModalEscolhaDeposito() {
-  fecharTodosModais();
-  abrirModal('modalEscolhaDeposito');
-}
-
-// Função unificada para processar depósitos (VERSÃO FINAL E CORRIGIDA)
+// --- FUNÇÕES DE PAGAMENTO E SAQUE CORRIGIDAS ---
 async function processarDeposito() {
-    let btn = document.querySelector(".deposit-form-container button");
-    if (btn) {
-        btn.disabled = true;
-        btn.textContent = 'Aguarde...';
-    }
+    const btn = document.getElementById("btnProcessarDeposito");
+    btn.disabled = true;
+    btn.textContent = 'Aguarde... ⏳';
 
     const valor = parseFloat(document.getElementById('valorDepositoInput').value);
 
     try {
         if (isNaN(valor) || valor <= 0) {
             throw new Error("Por favor, insira um valor de depósito válido.");
+        }
+        if (!perfil.cpf || !perfil.telefone) {
+            throw new Error("Seu perfil precisa ter CPF e Telefone cadastrados para depósitos. Atualize no seu perfil.");
         }
 
         const response = await fetch("https://navalhabackend.onrender.com/criar-deposito", {
@@ -3309,44 +3279,38 @@ async function processarDeposito() {
             body: JSON.stringify({
                 clienteUid: auth.currentUser.uid,
                 valor: valor,
+                clienteNome: perfil.nome,
+                clienteEmail: perfil.email,
+                clienteTelefone: perfil.telefone,
+                clienteCpf: perfil.cpf
             }),
         });
 
         const data = await response.json();
 
-        if (!response.ok) {
+        if (!response.ok || !data.success) {
             throw new Error(data.message || "Erro desconhecido ao contatar o servidor.");
         }
-
-        // Se o checkout foi criado com sucesso, redirecione para a URL do PagBank
-        if (data.data.links && data.data.links.length > 0) {
-            const checkoutLink = data.data.links.find(link => link.rel === 'checkout');
-            if (checkoutLink) {
-                window.location.href = checkoutLink.href;
-            } else {
-                throw new Error("Link de checkout não encontrado.");
-            }
+        
+        if (data.checkoutUrl) {
+            // Redireciona para o checkout do PagBank
+            window.location.href = data.checkoutUrl;
         } else {
-            throw new Error("A resposta da API do PagBank não contém um link de checkout.");
+            throw new Error("Link de checkout não foi retornado pelo servidor.");
         }
 
     } catch (error) {
         alert("Ocorreu um erro: " + error.message);
-    } finally {
-        if (btn) {
-            btn.disabled = false;
-            btn.textContent = '🔒 Pagar com PagBank';
-        }
+        btn.disabled = false;
+        btn.textContent = '🔒 Pagar com PagBank';
     }
 }
 
-// Abre o modal de saque (função existente, apenas para manter a consistência)
-async function solicitarSaque() {
-  fecharTodosModais();
+function solicitarSaque() {
+  fecharModal({target: document.getElementById('modalCarteira')});
   abrirModal('modalPagamentoSaque');
 }
 
-// Confirma o saque (função existente, sem alterações)
 async function confirmarSaque() {
     const valor = parseFloat(document.getElementById('saqueValor').value);
     const chaveTipo = document.getElementById('saqueChavePixTipo').value;
@@ -3357,40 +3321,29 @@ async function confirmarSaque() {
     if (!chave) return alert("Insira sua chave PIX.");
     if (perfil.saldo < valor) return alert("Saldo insuficiente.");
 
-    console.log("Chamando backend para solicitar saque de R$", valor);
     try {
-        const response = await fetch("https://navalhabackend.onrender.com/solicitar-saque", {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({
-                barbeiroUid: auth.currentUser.uid,
-                valorSaque: valor,
-                dadosContaBancaria: { 
-                    tipoChave: chaveTipo,
-                    chave: chave,
-                    nomeCompleto: perfil.nome
-                }
-            }),
+        await db.collection("solicitacoes").add({
+            tipo: "saque",
+            usuarioUid: auth.currentUser.uid,
+            usuarioNome: perfil.nome,
+            valor: valor,
+            chavePixTipo: chaveTipo,
+            chavePix: chave,
+            status: "pendente",
+            ts: firebase.firestore.FieldValue.serverTimestamp()
         });
-        const data = await response.json();
-        if (!response.ok) throw new Error(data.message || "Erro desconhecido");
+        
+        fecharModal({target: document.getElementById('modalPagamentoSaque')});
+        const mensagem = encodeURIComponent(`🚨 Nova solicitação de SAQUE no valor de R$${valor.toFixed(2)}\n\nDe: ${perfil.nome}\n\nChave PIX (${chaveTipo}): ${chave}`);
+        document.getElementById("btnWhatsappSaque").href = `https://wa.me/${WHATSAPP_ADM_PHONE}?text=${mensagem}`;
+        abrirModal('modalSaqueAnalisado');
 
-        fecharTodosModais();
-        abrirModal('modalSaqueEnviado');
+        notifyAdmins("📤 Nova Solicitação de Saque!", `${perfil.nome} solicitou um saque de R$ ${valor.toFixed(2)}.`);
     } catch (error) {
-        alert("Erro ao solicitar saque: " + error.message);
+        alert("Erro ao criar solicitação de saque: " + error.message);
     }
 }
 
-// Nova função para copiar o código PIX
-function copiarCodigoPix() {
-    const textarea = document.getElementById('pixCopiaECola');
-    textarea.select();
-    document.execCommand('copy');
-    alert("Código PIX copiado para a área de transferência!");
-}
-
-// Função utilitária para fechar todos os modais abertos
 function fecharTodosModais() {
     document.querySelectorAll('.modal.show').forEach(modal => {
         modal.classList.remove('show');
@@ -3545,26 +3498,11 @@ async function verDetalhesSolicitacao(id) {
 
   const confirmar = confirm(detalhes);
   if (confirmar) {
-    if (s.tipo === "deposito") aprovarDeposito(id, s.usuarioUid, s.valor);
-    else if (s.tipo === "saque") aprovarSaque(id, s.usuarioUid, s.valor);
+    if (s.tipo === "saque") aprovarSaque(id, s.usuarioUid, s.valor);
     else if (s.tipo === "liberacao_loja") aprovarLiberacaoLoja(id, s.usuarioUid);
   } else if (confirm("Deseja recusar a solicitação?")) {
     recusarSolicitacao(id, s.usuarioUid, s.tipo);
   }
-}
-
-function aprovarDeposito(id, uid, valor) {
-  db.runTransaction(async t => {
-    const userRef = db.collection("usuarios").doc(uid);
-    const userDoc = await t.get(userRef);
-    const pontos = Math.floor(valor / 10) * (userDoc.data().vip ? PONTOS_POR_DEPOSITO_VIP : PONTOS_POR_DEPOSITO_NORMAL);
-    t.update(userRef, { saldo: firebase.firestore.FieldValue.increment(valor), pontosFidelidade: firebase.firestore.FieldValue.increment(pontos) });
-    t.update(db.collection("solicitacoes").doc(id), { status: "aprovado" });
-    if (pontos > 0) notifyUser(uid, "🏆 Você Ganhou Pontos!", `+${pontos} pontos adicionados pelo seu depósito.`);
-  }).then(() => {
-    alert("Depósito aprovado!");
-    notifyUser(uid, "✅ Pagamento Recebido!", `Seu depósito de R$ ${valor.toFixed(2)} foi aprovado.`, { tipo: 'atualizar_saldo' });
-  }).catch(e => alert("Erro: " + e.message));
 }
 
 function aprovarSaque(id, uid, valor) {
@@ -4170,23 +4108,15 @@ async function exibirVersaoApp() {
     }
 }
 
-function recarregarSaldoDoUsuario() {
-    alert("💰 Seu saldo foi atualizado! A interface irá refletir a mudança em instantes.");
-    // O listener onSnapshot já cuidará de atualizar o valor na tela.
-    // Esta função serve apenas para notificar o usuário da mudança.
-}
 
 if (firebase.messaging.isSupported()) {
     messaging.onMessage((payload) => {
         console.log('Mensagem de primeiro plano recebida:', payload);
 
-        // **AQUI ESTÁ A CORREÇÃO**
-        // Se a mensagem for sobre saldo, recarregue a interface
         if (payload.data && payload.data.tipo === 'atualizar_saldo') {
-            recarregarSaldoDoUsuario();
+             alert("💰 Seu saldo foi atualizado! A interface irá refletir a mudança em instantes.");
         }
 
-        // Exibe uma notificação no navegador para o usuário
         if (payload.notification) {
             const notificationTitle = payload.notification.title;
             const notificationOptions = {
