--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@
     <p>Seu saldo atual é: <b style="color: var(--cor-destaque-ouro);">R$ <span id="saldoModal">0,00</span></b></p>
     <div class="deposit-form-container">
         <h4>📥 Adicionar Saldo</h4>
-        <input type="number" id="valorInput" placeholder="Digite o valor do depósito Exemplo (50.00)">
+        <input type="number" id="valorInput" class="input-moderno" placeholder="Valor do Depósito (Ex: 50.00)" required>
         <button class="btn-moderno" id="btnProcessarDeposito" onclick="processarDeposito()">🔒 Pagar com PagBank</button>
 <div id="pixContainer" style="display:none; text-align:center; margin-top: 20px;">
     <h4>Escaneie o QR Code ou use o código Pix:</h4>
