--- a/index.html
+++ b/index.html
@@ -3391,7 +3391,7 @@ function abrirAvaliacoesBarbeiro() {
 // --- FUNÇÕES DE PAGAMENTO E SAQUE CORRIGIDAS ---
 async function processarDeposito() {
     // Busca o campo de valor pelo ID
-    const valorInput = document.getElementById('valorDepositoInput');
+    const valorInput = document.getElementById('valorDeposito');
     
     // VERIFICAÇÃO ADICIONAL: Se o elemento não for encontrado, exibe um alerta e para a função.
     if (!valorInput) {
