--- a/index.html
+++ b/index.html
@@ -3396,7 +3396,7 @@ async function processarDeposito() {
     // VERIFICAÇÃO ADICIONAL: Se o elemento não for encontrado, exibe um alerta e para a função.
     if (!valorInput) {
         alert("Erro no código: O campo de depósito não foi encontrado. Verifique o ID do elemento HTML.");
-        console.error("Erro: Elemento com ID 'valorDepositoInput' não encontrado.");
+        console.error("Erro: Elemento com ID 'valorDeposito' não encontrado.");
         return;
     }
 
