--- a/index.html
+++ b/index.html
@@ -983,7 +983,8 @@
   <div class="modal-content" onclick="event.stopPropagation()">
     <h3>💰 Minha Carteira</h3>
     <p>Seu saldo atual é: <b style="color: var(--cor-destaque-ouro);">R$ <span id="saldoModal">0,00</span></b></p>
-    <button onclick="solicitarDeposito()">📥 Depositar</button>
+    <button class="btn btn-primary" onclick="abrirModalMetodosPagamento()">Depositar</button>
+
     <button onclick="solicitarSaque()">📤 Sacar</button>
     <button onclick="fecharModal(event)">❌ Fechar</button>
   </div>
