--- a/index.html
+++ b/index.html
@@ -990,31 +990,48 @@
   </div>
 </div>
 
-  <!-- Modal de Métodos de Pagamento -->
-  <div id="modalMetodosPagamento" class="modal hidden">
-  <div class="modal-content">
-    <span class="close-btn" onclick="fecharModal('modalMetodosPagamento')">&times;</span>
-    <h2 class="text-center">Escolha o método de pagamento</h2>
-    <div class="modal-metodos-grid">
-      <button class="btn btn-primary" onclick="abrirModalPix()">
-        <i class="fas fa-qrcode"></i> Pagar com Pix ⚡
-      </button>
-      <button class="btn btn-primary" onclick="abrirModalCartao()">
-        <i class="fas fa-credit-card"></i> Pagar com Cartão 💳
-      </button>
+  <div class="row items-center justify-between">
+    <div class="flex-grow">
+        <label for="valorDepositoInput" class="text-sm">Valor do Depósito (R$)</label>
+        <input type="number" id="valorDepositoInput" placeholder="Ex: 50.00" min="1" step="0.01" class="w-full mt-1 p-2 bg-gray-700 text-white rounded-md">
     </div>
-  </div>
+    <div class="ml-4">
+        <button class="btn btn-primary" onclick="abrirModalMetodosPagamento()">
+            <i class="fas fa-wallet"></i> Depositar
+        </button>
+    </div>
+</div>
+
+<!-- Modal de Métodos de Pagamento -->
+<div id="modalMetodosPagamento" class="modal hidden">
+    <div class="modal-content">
+        <span class="close-btn" onclick="fecharModal('modalMetodosPagamento')">&times;</span>
+        <h2 class="text-center">Escolha o método de pagamento</h2>
+        <div class="modal-metodos-grid">
+            <button class="btn btn-primary" onclick="abrirModalPix()">
+                <i class="fas fa-qrcode"></i> Pagar com Pix ⚡
+            </button>
+            <button class="btn btn-primary" onclick="abrirModalCartao()">
+                <i class="fas fa-credit-card"></i> Pagar com Cartão 💳
+            </button>
+        </div>
+    </div>
 </div>
 
 <script>
-    // As funções JavaScript precisam estar dentro da tag <script>
     window.abrirModalMetodosPagamento = () => {
-        // Fecha todos os outros popups antes de abrir este
         document.querySelectorAll('.modal').forEach(modal => {
             modal.classList.add('hidden');
         });
 
         const valorInput = document.getElementById('valorDepositoInput');
+        
+        // Verifica se o elemento foi encontrado antes de tentar usar .value
+        if (!valorInput) {
+            console.error('Erro: Elemento com ID "valorDepositoInput" não foi encontrado.');
+            return;
+        }
+
         const valor = parseFloat(valorInput.value);
         if (isNaN(valor) || valor <= 0) {
             mostrarMensagem('erro', 'Por favor, insira um valor válido para o depósito.');
@@ -1025,13 +1042,11 @@
         abrirModal('modalMetodosPagamento');
     };
 
-    // Abre o modal Pix
     window.abrirModalPix = () => {
         fecharModal('modalMetodosPagamento');
         gerarCobrancaPix();
     };
 
-    // Abre o modal Cartão
     window.abrirModalCartao = () => {
         fecharModal('modalMetodosPagamento');
         const valor = document.getElementById('valorDepositoInput').value;
@@ -1039,6 +1054,7 @@
         abrirModal('modalCartaoCredito');
     };
 </script>
+
 
 <!-- MODAL DE DEPÓSITO ATUALIZADO -->
 <div id="modalPagamentoDeposito" class="modal" onclick="fecharModal(event)">
