--- a/index.html
+++ b/index.html
@@ -1605,7 +1605,7 @@
 <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-messaging-compat.js"></script> 
 
-<script src="https://assets.pagbank.com.br/checkout-sdk/pagbank-checkout-v2.min.js"></script>
+<script type="text/javascript" src="https://assets.pagbank.com.br/checkout-sdk-js/pagbank-checkout.js"></script>
 
 <script>
 // Firebase e variáveis globais
