--- a/index.html
+++ b/index.html
@@ -1605,8 +1605,7 @@
 <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-messaging-compat.js"></script> 
 
-<script type="text/javascript" src="https://assets.pagbank.com.br/checkout-sdk-js/pagbank-checkout.js"></script>
-
+<script type="text/javascript" src="https://assets.pagseguro.com.br/checkout-sdk-js/rc/dist/browser/pagseguro.min.js"></script>
 <script>
 // Firebase e variáveis globais
 const firebaseConfig = {
